--- a/volunteer/apps/departments/templates/departments/department_detail.html
+++ b/volunteer/apps/departments/templates/departments/department_detail.html
@@ -26,7 +26,7 @@
                 </a>
             </h4>
             <p>{{ role.description|linebreaksbr }}</p>
-            <div id="role-{{ role.pk }}-shift-grid-container">
+            <div id="role-{{ role.pk }}-shift-grid-container" class="shift-grid">
                 {% include "shifts/partials/shift_grid.html" %}
             </div>
         </div>
