Fixes #102 Allow specifying the default event to user for shift display

--- a/volunteer/apps/departments/templates/departments/department_detail.html
+++ b/volunteer/apps/departments/templates/departments/department_detail.html
@@ -41,7 +41,7 @@ $(document).ready(function() {
     var applications = {};
     {% for role in department.roles.all %}applications.role_{{ role.pk }} = new app.ShiftGridApplication({
         el: $('#role-{{ role.id }}-shift-grid-container'),
-        rows: {{ role.shifts.all|as_grid|json }}
+        rows: {{ role.shifts.filter_to_current_event|as_grid|json }}
     });
     applications.role_{{ role.pk }}.start();
     {% endfor %}
