Fixes #101 Show full datetime in modal header

--- a/volunteer/static/js/shift-grid/templates/grid_cell_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/grid_cell_template.handlebars
@@ -1,5 +1,5 @@
 {{#unless is_empty }}
-    <h4>{{ cellTitle }}</h4>
+    <h6>{{ cellTitleShort }}</h6>
     <ul class="shifts">
     </ul>
 {{/unless}}
