--- a/volunteer/static/js/shift-grid/templates/role_modal_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/role_modal_template.handlebars
@@ -1,7 +1,7 @@
 <div>
     <h4>
         <span class="glyphicon glyphicon-{{ icon }}" aria-hidden="true"></span>
-        {{ name }} <small>Department: {{ department.name }}</small>
+        Role: {{ name }} <small>Department: {{ department.name }}</small>
     </h4>
     <p>
         {{ description }}
