--- a/volunteer/static/js/shift-grid/templates/shift_grid_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/shift_grid_template.handlebars
@@ -1,29 +1,32 @@
 <thead>
     <tr>
-        <td>12AM</td>
-        <td>1AM</td>
-        <td>2AM</td>
-        <td>3AM</td>
-        <td>4AM</td>
-        <td>5AM</td>
-        <td>6AM</td>
-        <td>7AM</td>
-        <td>8AM</td>
-        <td>9AM</td>
-        <td>10AM</td>
-        <td>11AM</td>
-        <td>12PM</td>
-        <td>1PM</td>
-        <td>2PM</td>
-        <td>3PM</td>
-        <td>4PM</td>
-        <td>5PM</td>
-        <td>6PM</td>
-        <td>7PM</td>
-        <td>8PM</td>
-        <td>9PM</td>
-        <td>10PM</td>
-        <td>11PM</td>
+        <th colspan="24" class="text-center">{{ gridDateDisplay }}</th>
+    </tr>
+    <tr>
+        <th>12AM</th>
+        <th>1AM</th>
+        <th>2AM</th>
+        <th>3AM</th>
+        <th>4AM</th>
+        <th>5AM</th>
+        <th>6AM</th>
+        <th>7AM</th>
+        <th>8AM</th>
+        <th>9AM</th>
+        <th>10AM</th>
+        <th>11AM</th>
+        <th>12PM</th>
+        <th>1PM</th>
+        <th>2PM</th>
+        <th>3PM</th>
+        <th>4PM</th>
+        <th>5PM</th>
+        <th>6PM</th>
+        <th>7PM</th>
+        <th>8PM</th>
+        <th>9PM</th>
+        <th>10PM</th>
+        <th>11PM</th>
     </tr>
 </thead>
 <tbody class="shift-grid">
