--- a/volunteer/static/js/shift-grid/templates/cell_modal_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/cell_modal_template.handlebars
@@ -1,6 +1,6 @@
 <div class="modal-dialog">
     <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-header bg-primary">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h4 class="modal-title">Shifts at {{ cellTitleLong }}</h4>
         </div>
@@ -10,7 +10,7 @@
                 <!-- ModalRoleView(s) -->
             </div>
         </div>
-        <div class="modal-footer">
+        <div class="modal-footer bg-primary">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
     </div>
