--- a/volunteer/static/js/shift-grid/templates/grid_cell_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/grid_cell_template.handlebars
@@ -1,5 +1,15 @@
 {{#unless is_empty }}
-    <h6>{{ cellTitleShort }}</h6>
-    <ul class="shifts">
-    </ul>
+    <div class="panel-heading">
+        {{#if hasUserShifts }}
+            <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
+        {{/if}}
+        {{ cellTitleShort }}
+    </div>
+    <div class="panel-body">
+        {{#if open_slot_count }}
+            {{ open_slot_count }} open shift{{#if pluralOpenSlots }}s{{/if}}
+        {{else}}
+            Full
+        {{/if}}
+    </div>
 {{/unless}}
