get front end rendering

--- a/volunteer/static/js/shift-grid/templates/shift_grid_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/shift_grid_template.handlebars
@@ -1,32 +1,32 @@
 <thead>
     <tr>
-        <th colspan="24" class="text-center">{{ gridDateDisplay }}</th>
+        <th colspan="1440" class="text-center">{{ gridDateDisplay }}</th>
     </tr>
     <tr>
-        <th>12AM</th>
-        <th>1AM</th>
-        <th>2AM</th>
-        <th>3AM</th>
-        <th>4AM</th>
-        <th>5AM</th>
-        <th>6AM</th>
-        <th>7AM</th>
-        <th>8AM</th>
-        <th>9AM</th>
-        <th>10AM</th>
-        <th>11AM</th>
-        <th>12PM</th>
-        <th>1PM</th>
-        <th>2PM</th>
-        <th>3PM</th>
-        <th>4PM</th>
-        <th>5PM</th>
-        <th>6PM</th>
-        <th>7PM</th>
-        <th>8PM</th>
-        <th>9PM</th>
-        <th>10PM</th>
-        <th>11PM</th>
+        <th colspan="60">12AM</th>
+        <th colspan="60">1AM</th>
+        <th colspan="60">2AM</th>
+        <th colspan="60">3AM</th>
+        <th colspan="60">4AM</th>
+        <th colspan="60">5AM</th>
+        <th colspan="60">6AM</th>
+        <th colspan="60">7AM</th>
+        <th colspan="60">8AM</th>
+        <th colspan="60">9AM</th>
+        <th colspan="60">10AM</th>
+        <th colspan="60">11AM</th>
+        <th colspan="60">12PM</th>
+        <th colspan="60">1PM</th>
+        <th colspan="60">2PM</th>
+        <th colspan="60">3PM</th>
+        <th colspan="60">4PM</th>
+        <th colspan="60">5PM</th>
+        <th colspan="60">6PM</th>
+        <th colspan="60">7PM</th>
+        <th colspan="60">8PM</th>
+        <th colspan="60">9PM</th>
+        <th colspan="60">10PM</th>
+        <th colspan="60">11PM</th>
     </tr>
 </thead>
 <tbody class="shift-grid">
