Fix column display to be dynamic based on necessary columns

--- a/volunteer/static/js/shift-grid/templates/grid_cell_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/grid_cell_template.handlebars
@@ -1,5 +1,5 @@
 {{#unless is_empty }}
-    <div class="panel-heading">
+    <div class="panel-heading text-center">
         {{#if hasUserShifts }}
             <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
         {{/if}}
