--- a/volunteer/static/js/shift-grid/templates/shift_grid_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/shift_grid_template.handlebars
@@ -1,32 +1,32 @@
 <thead>
     <tr>
-        <th colspan="1440" class="text-center">{{ gridDateDisplay }}</th>
+        <th colspan="{{ colspan24Hour }}" class="text-center">{{ gridDateDisplay }}</th>
     </tr>
     <tr>
-        <th colspan="60">12AM</th>
-        <th colspan="60">1AM</th>
-        <th colspan="60">2AM</th>
-        <th colspan="60">3AM</th>
-        <th colspan="60">4AM</th>
-        <th colspan="60">5AM</th>
-        <th colspan="60">6AM</th>
-        <th colspan="60">7AM</th>
-        <th colspan="60">8AM</th>
-        <th colspan="60">9AM</th>
-        <th colspan="60">10AM</th>
-        <th colspan="60">11AM</th>
-        <th colspan="60">12PM</th>
-        <th colspan="60">1PM</th>
-        <th colspan="60">2PM</th>
-        <th colspan="60">3PM</th>
-        <th colspan="60">4PM</th>
-        <th colspan="60">5PM</th>
-        <th colspan="60">6PM</th>
-        <th colspan="60">7PM</th>
-        <th colspan="60">8PM</th>
-        <th colspan="60">9PM</th>
-        <th colspan="60">10PM</th>
-        <th colspan="60">11PM</th>
+        <th colspan="{{ colspan1Hour }}">12AM</th>
+        <th colspan="{{ colspan1Hour }}">1AM</th>
+        <th colspan="{{ colspan1Hour }}">2AM</th>
+        <th colspan="{{ colspan1Hour }}">3AM</th>
+        <th colspan="{{ colspan1Hour }}">4AM</th>
+        <th colspan="{{ colspan1Hour }}">5AM</th>
+        <th colspan="{{ colspan1Hour }}">6AM</th>
+        <th colspan="{{ colspan1Hour }}">7AM</th>
+        <th colspan="{{ colspan1Hour }}">8AM</th>
+        <th colspan="{{ colspan1Hour }}">9AM</th>
+        <th colspan="{{ colspan1Hour }}">10AM</th>
+        <th colspan="{{ colspan1Hour }}">11AM</th>
+        <th colspan="{{ colspan1Hour }}">12PM</th>
+        <th colspan="{{ colspan1Hour }}">1PM</th>
+        <th colspan="{{ colspan1Hour }}">2PM</th>
+        <th colspan="{{ colspan1Hour }}">3PM</th>
+        <th colspan="{{ colspan1Hour }}">4PM</th>
+        <th colspan="{{ colspan1Hour }}">5PM</th>
+        <th colspan="{{ colspan1Hour }}">6PM</th>
+        <th colspan="{{ colspan1Hour }}">7PM</th>
+        <th colspan="{{ colspan1Hour }}">8PM</th>
+        <th colspan="{{ colspan1Hour }}">9PM</th>
+        <th colspan="{{ colspan1Hour }}">10PM</th>
+        <th colspan="{{ colspan1Hour }}">11PM</th>
     </tr>
 </thead>
 <tbody class="shift-grid">
