--- a/volunteer/static/css/volunteer.css
+++ b/volunteer/static/css/volunteer.css
@@ -1,3 +1,13 @@
 div.shift-grid .table td.panel {
     padding: 0px;
 }
+div.shift-grid .table td.panel:hover {
+    background-color: #f5f5f5;
+}
+div.shift-grid .table td.panel div.panel-heading {
+    font-size: 12px;
+    background-color: #f5f5f5;
+}
+div.shift-grid .table td.panel.empty:hover {
+    background-color: #fff;
+}
