--- a/volunteer/static/js/shift-grid/templates/grid_cell_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/grid_cell_template.handlebars
@@ -1,5 +1,11 @@
 {{#unless is_empty }}
     <div class="panel-heading text-center">
+        {{#if open_on_left }}
+            <span class="glyphicon glyphicon-chevron-left pull-left" aria-hidden="true"></span>
+        {{/if}}
+        {{#if open_on_right }}
+            <span class="glyphicon glyphicon-chevron-right pull-right" aria-hidden="true"></span>
+        {{/if}}
         {{#if hasUserShifts }}
             <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
         {{/if}}
