--- a/volunteer/static/js/shift-grid/templates/slot_modal_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/slot_modal_template.handlebars
@@ -1,4 +1,6 @@
 <strong>{{ volunteer_display_name }}</strong>
 {{#if isClaimedByUser }}
-    <button type="button" class="btn btn-warning btn-sm release-slot">Release Slot</button>
+    {{#unless is_locked }}
+        <button type="button" class="btn btn-warning btn-sm release-slot">Release Slot</button>
+    {{/unless}}
 {{/if}}
