Keep the shift grid in sync with the users shifts

--- a/volunteer/static/js/shift-grid/templates/grid_cell_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/grid_cell_template.handlebars
@@ -12,8 +12,8 @@
         {{ cellTitleShort }}
     </div>
     <div class="panel-body">
-        {{#if open_slot_count }}
-            {{ open_slot_count }} open shift{{#if pluralOpenSlots }}s{{/if}}
+        {{#if openSlotCount }}
+            {{ openSlotCount }} open shift{{#if pluralOpenSlots }}s{{/if}}
         {{else}}
             Full
         {{/if}}
