--- a/volunteer/static/js/shift-grid/templates/shift_modal_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/shift_modal_template.handlebars
@@ -35,7 +35,7 @@
                                placeholder="Pass Code"
                                aria-describedby="unlock_code-addon">
                         <span class="input-group-btn">
-                            <button class="btn btn-primary claim-slot" type="button">Cliam a slot</button>
+                            <button class="btn btn-primary claim-slot" type="button">Claim a slot</button>
                         </span>
                     </div>
                 </div>
