--- a/volunteer/apps/departments/templates/departments/department_detail.html
+++ b/volunteer/apps/departments/templates/departments/department_detail.html
@@ -18,10 +18,10 @@
     </div>
     </section>
     {% for role in department.roles.all %}
-        <div class="role">
+        <div class="role" id="role-{{ role.pk }}">
             <h4>
                 Role: {{ role }}
-                <a href="#role-{{ role.pk }}" class="text-muted">
+                <a href="#role-{{ role.pk }}" class="text-muted role-quicklink">
                     <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
                 </a>
             </h4>
