--- a/volunteer/apps/accounts/templates/registration/register_success.html
+++ b/volunteer/apps/accounts/templates/registration/register_success.html
@@ -1,8 +1,24 @@
 {% extends "layout_skinny.html" %}
 
 {% block content %}
-    <h1><span>Verification Email Sent</span></h1>
     <section>
+        <h1>2. Confirm email address</h1>
+        <p>
+            <ul>
+                <li class="text-success">
+                    <span class="glyphicon glyphicon-check"></span>
+                    &nbsp;- 1. Submit email address
+                </li>
+                <li class="text-info">
+                    <span class="glyphicon glyphicon-log-in"></span>
+                    &nbsp;- 2. Confirm email address
+                </li>
+                <li class="text-muted">
+                    <span class="glyphicon glyphicon-unchecked"></span>
+                    &nbsp;- 3. Create account
+                </li>
+            </ul>
+        </p>
         <p>Check your inbox.  You should have an email with a link which will
         allow you to complete your registration</p>
     </section>
