--- a/volunteer/apps/accounts/templates/registration/register.html
+++ b/volunteer/apps/accounts/templates/registration/register.html
@@ -1,10 +1,25 @@
 {% extends "layout_skinny.html" %}
 
 {% block content %}
-    <h1>Register</h1>
     <section>
-
         <form action="." method="post">
+            <h1>1. Submit email address</h1>
+            <p>
+              <ul>
+                  <li class="text-info">
+                      <span class="glyphicon glyphicon-log-in"></span>
+                      &nbsp;- 1. Submit email address
+                  </li>
+                  <li class="text-muted">
+                      <span class="glyphicon glyphicon-unchecked"></span>
+                      &nbsp;- 2. Confirm email address
+                  </li>
+                  <li class="text-muted">
+                      <span class="glyphicon glyphicon-unchecked"></span>
+                      &nbsp;- 3. Create account
+                  </li>
+              </ul>
+            </p>
             {% include 'partials/form_as_fieldsets.html' %}
             <button class="btn btn-default" type="submit">Submit</button>
         </form>
