Fix password reset template issues

--- a/volunteer/apps/accounts/templates/registration/password_reset_confirm.html
+++ b/volunteer/apps/accounts/templates/registration/password_reset_confirm.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "layout_skinny.html" %}
 {% block body_class %}{{ block.super }} home{% endblock %}
 
 {% block content %}
