--- a/volunteer/static/css/volunteer.css
+++ b/volunteer/static/css/volunteer.css
@@ -33,7 +33,7 @@ div.role h4:hover a.role-quicklink {
  * to compliment bootstra-black.min.css
  */
 body {   
-    background: #000 url("http://apogaea.com/wp-content/uploads/2015/01/Apogaea_web_2015_flat03.jpg") no-repeat center 40px;
+    background: #000 url("../img/Apogaea_web_header_2015_voldb.jpg") no-repeat center 40px;
 }
 
 .container {
