fix modal backdrop

--- a/volunteer/apps/shifts/templates/shifts/partials/shift_grid.html
+++ b/volunteer/apps/shifts/templates/shifts/partials/shift_grid.html
@@ -4,6 +4,8 @@
 <div class="shift-grid-table">
     <!-- ShiftGridTableView -->
 </div>
-<div class="cell-modal">
-    <!-- ModalCellView -->
+<div class="modal fade">
+    <div class="modal-dialog">
+        <!-- ModalCellView -->
+    </div>
 </div>
