--- a/volunteer/static/css/bootstrap-black.css
+++ b/volunteer/static/css/bootstrap-black.css
@@ -5766,12 +5766,10 @@ button.close {
   outline: 0;
 }
 .modal-backdrop {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
-  bottom: 0;
   left: 0;
-  z-index: 1040;
   background-color: #000000;
 }
 .modal-backdrop.fade {
