--- a/volunteer/templates/admin/admin_layout.html
+++ b/volunteer/templates/admin/admin_layout.html
@@ -4,7 +4,7 @@
 {% block content_wrapper %}
 <div class="container">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-sm-12">
             {% block content %}
             {% endblock %}
         </div>
