--- a/volunteer/templates/layout_skinny.html
+++ b/volunteer/templates/layout_skinny.html
@@ -4,7 +4,7 @@
 {% block content_wrapper %}
 <div class="container">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-sm-6 col-sm-offset-3">
             {% block content %}
             {% endblock %}
         </div>
