list view working

--- a/volunteer/apps/accounts/templates/admin/accounts/user_detail.html
+++ b/volunteer/apps/accounts/templates/admin/accounts/user_detail.html
@@ -2,8 +2,8 @@
 
 
 {% block content %}
-<h1>Volunteer Database Admin</h1>
+    <h1>User #{{ profile.pk }}: {{ profile.display_name }}</h1>
     <section>    	       
-        <p>This is a sub page for the site admin that doesn't exist yet</p>
     </section>
 {% endblock %}
+
