--- a/volunteer/templates/admin/admin_layout.html
+++ b/volunteer/templates/admin/admin_layout.html
@@ -5,6 +5,14 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
+            <nav class="navbar navbar-default">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="{% url 'admin:index' %}">Admin</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url 'admin:user-list' %}">Users</a></li>
+                </ul>
+            </nav>
             {% block content %}
             {% endblock %}
         </div>
