Add event admin

--- a/volunteer/templates/admin/admin_layout.html
+++ b/volunteer/templates/admin/admin_layout.html
@@ -12,6 +12,9 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'admin:user-list' %}">Users</a></li>
                 </ul>
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url 'admin:event-list' %}">Events</a></li>
+                </ul>
             </nav>
             {% block content %}
             {% endblock %}
