--- a/volunteer/apps/departments/templates/admin/departments/department_detail.html
+++ b/volunteer/apps/departments/templates/admin/departments/department_detail.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-    <h1>Event #{{ event.pk }}: {{ event.name }}</h1>
+    <h1>Deparment #{{ department.pk }}: {{ department.name }}</h1>
     <section>
         <div class="container">
             <div class="row">
@@ -11,13 +11,11 @@
                     <h2>Details</h2>
                     <dl class="dl-horizontal">
                         <dt>Id:</dt>
-                        <dd>{{ event.pk }}</dd>
+                        <dd>{{ department.pk }}</dd>
                         <dt>Name:</dt>
-                        <dd>{{ event.name }}</dd>
-                        <dt>Registration Open:</dt>
-                        <dd>{{ event.registration_open_at }}</dd>
-                        <dt>Registration Close:</dt>
-                        <dd>{{ event.registration_close_at }}</dd>
+                        <dd>{{ department.name }}</dd>
+                        <dt>Description:</dt>
+                        <dd>{{ department.description|linebreaksbr }}</dd>
                     </dl>
                 </div>
                 <div class="col-sm-6">
@@ -29,5 +27,9 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section>
+        <h2>Roles</h2>
+        <p>TODO</p>
     </section>
 {% endblock %}
