--- a/volunteer/apps/departments/templates/departments/department_list.html
+++ b/volunteer/apps/departments/templates/departments/department_list.html
@@ -1,7 +1,7 @@
 {% extends "layout_full.html" %}
 
 {% block content %}
-    <h1>Department Index</h1>
+    <h1>Departments</h1>
     {% for department in departments %}
         <section class="departments well" id="department-{{ department.pk }}">
             <h3>
