--- a/volunteer/templates/admin/admin_layout.html
+++ b/volunteer/templates/admin/admin_layout.html
@@ -15,6 +15,9 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'admin:event-list' %}">Events</a></li>
                 </ul>
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url 'admin:department-list' %}">Departments</a></li>
+                </ul>
             </nav>
             {% block content %}
             {% endblock %}
