--- a/volunteer/templates/base.html
+++ b/volunteer/templates/base.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" />
         {% if ROLLBAR_CONFIG %}
             <script type="text/javascript">var _rollbarConfig = {{ ROLLBAR_CONFIG|json }};</script>
-            <script src="{% static 'js/rollbar.js' %}" type="text/javascript"></script>
+            {% javascript 'rollbar' %}
         {% endif %}
 
         {% stylesheet 'base' %}
