--- a/volunteer/apps/departments/templates/admin/departments/role_detail.html
+++ b/volunteer/apps/departments/templates/admin/departments/role_detail.html
@@ -31,7 +31,6 @@
     </section>
     <section>
         <h2>Shifts</h2>
-        <p>#TODO</p>
-        {#{% render_table table %}#}
+        {% render_table table %}
     </section>
 {% endblock %}
