--- a/volunteer/apps/accounts/templates/admin/accounts/user_detail.html
+++ b/volunteer/apps/accounts/templates/admin/accounts/user_detail.html
@@ -1,6 +1,14 @@
 {% extends "admin/admin_layout.html" %}
 {% load humanize %}
 
+{% block bread %}
+    {{ block.super }}
+    <li><a href="{% url 'admin:user-list' %}">Users</a></li>
+{% endblock %}
+
+{% block crumbs %}
+    <li>User #{{ voldb_user.pk }}</li>
+{% endblock %}
 
 {% block content %}
     <h1>User #{{ voldb_user.pk }}: {{ voldb_user.profile.display_name }}</h1>
