--- a/volunteer/apps/departments/templates/admin/departments/department_list.html
+++ b/volunteer/apps/departments/templates/admin/departments/department_list.html
@@ -1,6 +1,9 @@
 {% extends "admin/admin_layout.html" %}
 {% load render_table from django_tables2 %}
 
+{% block crumbs %}
+    <li>Departments</li>
+{% endblock %}
 
 {% block content %}
     <h1>
