--- a/volunteer/apps/departments/templates/admin/departments/role_create.html
+++ b/volunteer/apps/departments/templates/admin/departments/role_create.html
@@ -1,5 +1,13 @@
-{% extends "admin/admin_layout.html" %}
+{% extends "admin/departments/department_detail.html" %}
 
+{% block bread %}
+    {{ block.super }}
+    <li><a href="{% url 'admin:department-detail' pk=department.pk %}">Department #{{ department.pk }}: {{ department.name }}</a></li>
+{% endblock %}
+
+{% block crumbs %}
+    <li>Create New Role</li>
+{% endblock %}
 
 {% block content %}
     <h1>Create New Role</h1>
