--- a/volunteer/apps/events/templates/admin/events/event_list.html
+++ b/volunteer/apps/events/templates/admin/events/event_list.html
@@ -2,6 +2,11 @@
 {% load render_table from django_tables2 %}
 
 
+{% block crumbs %}
+    <li>Events</li>
+{% endblock %}
+
+
 {% block content %}
     <h1>
         Events
