--- a/volunteer/templates/admin/index.html
+++ b/volunteer/templates/admin/index.html
@@ -4,6 +4,6 @@
 {% block content %}
 <h1>Volunteer Database Admin</h1>
     <section>    	       
-        <p>This is a sub page for the site admin that doesn't exist yet</p>
+        <p>This is the admin site for the volunteer database</p>
     </section>
 {% endblock %}
