--- a/volunteer/apps/departments/templates/departments/department_detail.html
+++ b/volunteer/apps/departments/templates/departments/department_detail.html
@@ -21,7 +21,7 @@
         <div class="role" id="role-{{ role.pk }}">
             <h4>
                 Role: {{ role }}
-                <a href="#role-{{ role.pk }}" class="text-muted role-quicklink">
+                <a href="#role-{{ role.pk }}" class="text-muted quicklink">
                     <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
                 </a>
             </h4>
