--- a/volunteer/apps/departments/templates/departments/department_list.html
+++ b/volunteer/apps/departments/templates/departments/department_list.html
@@ -6,7 +6,7 @@
         <section class="departments well" id="department-{{ department.pk }}">
             <h3>
                 {{ department }}
-                <a href="#department-{{ department.pk }}" class="text-muted">
+                <a href="#department-{{ department.pk }}" class="text-muted quicklink">
                     <span class="glyphicon glyphicon-link" aria-hidden="true"></span>
                 </a>
             </h3>
