make the flag green

--- a/volunteer/static/js/shift-grid/templates/grid_cell_template.handlebars
+++ b/volunteer/static/js/shift-grid/templates/grid_cell_template.handlebars
@@ -7,7 +7,7 @@
             <span class="glyphicon glyphicon-chevron-right pull-right" aria-hidden="true"></span>
         {{/if}}
         {{#if hasUserShifts }}
-            <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
+            <span class="glyphicon glyphicon-flag text-success" aria-hidden="true"></span>
         {{/if}}
         {{ cellTitleShort }}
     </div>
