Add shift kicking and other basic ux improvements

--- a/volunteer/apps/accounts/templates/accounts/dashboard.html
+++ b/volunteer/apps/accounts/templates/accounts/dashboard.html
@@ -11,7 +11,7 @@
                {{ user.email }}<br />
                {{ user.profile.phone }}
             </p>
-            <a href="{% url 'password-change' %}" class="btn btn-default">Change Password</a><br />
+            <a href="{% url 'password-change' %}" class="btn btn-default">Change Password</a>
             <a href="{% url 'profile-edit' %}" class="btn btn-default">Edit Profile</a>
         </div>            
     </section>
