--- a/volunteer/apps/departments/templates/admin/departments/role_merge.html
+++ b/volunteer/apps/departments/templates/admin/departments/role_merge.html
@@ -21,7 +21,8 @@
                         <h4 class="text-danger">Warning!</h4>
                         <p class="text-danger">This action is destructive and cannot be undone.  All shifts belonging to this role will be assigned to the selected role and this role will be <strong>deleted</strong>.  </p>
                         {% include 'partials/form_as_fieldsets.html' %}
-                        <button class="btn btn-warning" type="submit">Merge</button>
+                        <a class="btn btn-primary" href="{% url 'admin:role-detail' department_pk=role.department_id pk=role.pk %}">Nevermind, go back</a>
+                        <button class="btn btn-warning pull-right" type="submit">Merge</button>
                     </form>
                 </div>
             </div>
